--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.453.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.7",
